<resources>
    <string name="app_name">MoneyNote</string>
    <string name="input">Input</string>
    <string name="calendar">Calendar</string>
    <string name="report">Report</string>
    <string name="setting">Setting</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="not_entered">Not entered</string>
    <string name="_0_00">0.00</string>
    <string name="category">Category</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="dollar">$</string>
    <string name="total">Total</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="no_data">No data</string>
    <string name="income_and_expense">Income and expense</string>
    <string name="fixed_cost_and_periodic_income_settings">Fixed cost and Periodic income settings</string>
    <string name="edit_categories">Edit categories</string>
    <string name="initial_balance">Initial balance</string>
    <string name="theme_color">Theme color</string>
    <string name="annual_report">Annual report</string>
    <string name="add_fixed_cost">Add fixed cost</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="frequency">Frequency</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="on_saturday_and_sunday">On Saturday and Sunday</string>
    <string name="None">None</string>
    <string name="appointed_date">Appointed date</string>
    <string name="if_the_end_date_is_none_please_note_that_fixed_costs_will_not_be_displayed_on_the_calendar_etc_unless_it_is_a_corresponding_day_non_the_contrary_if_you_set_the_end_date_it_will_alway_be_displayed_on_the_calendar_and_the_report_screen">If the End date is \'None\', please note that fixed costs will not be displayed on the calendar etc. unless it is a corresponding day. \nOn the contrary, if you set the End date, it will alway be displayed on the calendar and the report screen.</string>
    <string name="do_nothing">Do nothing</string>
    <string name="set_the_start_date_as_the_before_date">Set the start date as the before date</string>
    <string name="set_the_start_date_as_the_after_date">Set the start date as the after date</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="all_period">All Period</string>
    <string name="_all_period_">(All period)</string>
    <string name="new_category">New category</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="please_input_category_name">Please input category name</string>
    <string name="icon">Icon</string>
    <string name="color">Color</string>
    <string name="edit_category">Edit category</string>
    <string name="delete_successfully">Delete successfully!</string>
    <string name="title_mustn_t_be_blank">Title mustn\'t be blank!</string>
    <string name="save_successfully">Save successfully!</string>
    <string name="copy">Copy</string>
    <string name="override">Override</string>
    <string name="clone_note">Clone note</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="send_feedback">Send feedback</string>
    <string name="more_app">More app</string>
    <string name="coming_soon">Coming soon!</string>
</resources>