<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/highlightBackgroundColor"
    android:orientation="vertical"
    tools:context=".presentation.edit_note.EditNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:background="@color/primaryColor"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_2sdp"
        android:paddingEnd="@dimen/_8sdp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:contentDescription="@null"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/highlightTextColor" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_2sdp"
            android:layout_weight="1"
            android:text="@string/edit"
            android:textColor="@color/highlightTextColor"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivSaveNote"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:contentDescription="@null"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_add_note"
            app:tint="@color/highlightTextColor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_weight="1"
        android:background="@color/backgroundColor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date"
                android:textColor="@color/defaultTextColor"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btnPrevDay"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:contentDescription="@null"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_prev" />

                <TextView
                    android:id="@+id/tvSelectedDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edt_add_note"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_7sdp"
                    android:textColor="@color/defaultTextColor"
                    android:textSize="@dimen/_12sdp"
                    app:drawableEndCompat="@drawable/ic_calendar"
                    app:drawableTint="@color/primaryColor"
                    tools:text="11.5.2025 (Tue)" />

                <ImageView
                    android:id="@+id/btnNextDay"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:contentDescription="@null"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_next" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_7sdp"
            android:background="@color/outlineColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/note"
                android:textColor="@color/defaultTextColor"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/edtNote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:layout_weight="4"
                android:background="@drawable/bg_edt_add_note"
                android:gravity="center_vertical"
                android:hint="@string/not_entered"
                android:maxLines="6"
                android:padding="@dimen/_7sdp"
                android:textColor="@color/defaultTextColor"
                android:textColorHighlight="@color/selectedTextBackgroundColor"
                android:textColorHint="@color/disableTextColor"
                android:textCursorDrawable="@drawable/cursor_edt"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_7sdp"
            android:background="@color/outlineColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvExpense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/expense"
                android:textColor="@color/defaultTextColor"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center">

                <EditText
                    android:id="@+id/edtExpense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edt_add_note"
                    android:gravity="center_vertical"
                    android:hint="@string/_0_00"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:padding="@dimen/_7sdp"
                    android:textColor="@color/defaultTextColor"
                    android:textColorHighlight="@color/selectedTextBackgroundColor"
                    android:textColorHint="@color/disableTextColor"
                    android:textCursorDrawable="@drawable/cursor_edt"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:gravity="center"
                    android:text="@string/dollar"
                    android:textColor="@color/defaultTextColor"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_7sdp"
            android:background="@color/outlineColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/category"
            android:textColor="@color/defaultTextColor"
            android:textSize="@dimen/_12sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rclCategories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_7sdp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="4"
            tools:listitem="@layout/item_category_add_note" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor">

        <TextView
            android:id="@+id/tvSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:layout_marginVertical="@dimen/_13sdp"
            android:background="@drawable/bg_btn_submit"
            android:clickable="true"
            android:elevation="@dimen/_2sdp"
            android:focusable="true"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/override"
            android:textAllCaps="false"
            android:textColor="@color/highlightTextColor"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottomBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:background="@color/primaryColor"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_2sdp"
        android:paddingEnd="@dimen/_8sdp">

        <TextView
            android:id="@+id/tvCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/copy"
            android:textColor="@color/highlightTextColor"
            android:textSize="@dimen/_12sdp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/delete"
            android:textColor="@color/highlightTextColor"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

</LinearLayout>