<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/_2sdp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/btnDoNothing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_setting_item"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_7sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:text="@string/do_nothing"
            android:textColor="@color/defaultTextColor"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnBefore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_setting_item"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_7sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:text="@string/set_the_start_date_as_the_before_date"
            android:textColor="@color/defaultTextColor"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnAfter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_setting_item"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_7sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:text="@string/set_the_start_date_as_the_after_date"
            android:textColor="@color/defaultTextColor"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
</LinearLayout>