<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/highlightBackgroundColor"
    android:orientation="vertical"
    tools:context=".presentation.edit_category.EditCategoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:background="@color/primaryColor"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_2sdp"
        android:paddingEnd="@dimen/_8sdp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:contentDescription="@null"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_hehe"
            app:tint="@color/highlightTextColor" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_2sdp"
            android:layout_weight="1"
            android:text="@string/new_category"
            android:textColor="@color/highlightTextColor"
            android:textSize="@dimen/_15sdp" />

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:contentDescription="@null"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_hehe"
            android:visibility="gone"
            app:tint="@color/highlightTextColor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_weight="1"
        android:background="@color/backgroundColor"
        android:orientation="vertical"
        android:paddingTop="@dimen/_4sdp"
        android:paddingBottom="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/defaultTextColor"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_weight="4"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/please_input_category_name"
                android:maxLines="6"
                android:padding="@dimen/_7sdp"
                android:textColor="@color/defaultTextColor"
                android:textColorHighlight="@color/selectedTextBackgroundColor"
                android:textColorHint="@color/disableTextColor"
                android:textCursorDrawable="@drawable/cursor_edt"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:background="@color/outlineColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/icon"
            android:textColor="@color/defaultTextColor"
            android:textSize="@dimen/_12sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rclIcon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="4"
            tools:listitem="@layout/item_edit_category_icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:background="@color/outlineColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/color"
            android:textColor="@color/defaultTextColor"
            android:textSize="@dimen/_12sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rclColor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="5"
            tools:listitem="@layout/item_edit_category_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor">

        <TextView
            android:id="@+id/tvSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:layout_marginVertical="@dimen/_13sdp"
            android:background="@drawable/bg_btn_submit"
            android:clickable="true"
            android:elevation="@dimen/_2sdp"
            android:focusable="true"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/highlightTextColor"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>
</LinearLayout>